--- a/templates/for_applicant/initial.html
+++ b/templates/for_applicant/initial.html
@@ -26,7 +26,7 @@
                         <img src="{% static 'images/piro_logo.png' %}">
                         <p class="introduce slogan">프로그래밍의 첫 걸음,</p>
                         <p class="introduce piro">PIROGRAMMING</p>
-                        <p class="introduce content">문구 추천 좀</p>
+                        <p class="introduce content">열정 가득한 피로그래밍 22기 신입회원들을 기다리겠습니다!</p>
                     </div>
                     <a class="link_write" href="{% url 'applicants:apply' pk=template.pk %}">
                         <span>22기 서류 지원하러 가기</span>
