--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -1,102 +1,57 @@
-@media (min-width: 691px) {
-   .responsive_initial_btns {
-      display: none;
-   }
-}
-
-@media (max-width: 690px) {
+@media (max-width: 767px) {
    header {
-      height: 100px;
+      height: 13rem;
    }
    main {
-      height: calc(100vh - 100px);
+      height: calc(100vh - 13rem);
    }
-   .initial_btns {
-      display: none;
+   /* base.html, initial.html */
+   #mainLogo {
+      width: 12rem;
    }
-   .applicant_navbar {
-      justify-content: center;
+   .initial_btns span, .initial_btns a {
+      font-size: 1.2rem;
    }
-   .main_comment {
-      margin-top: 2rem;
+   .initialApplicant_container1 {
+      padding: 2rem 0;
    }
-   .responsive_initial_btns {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 18rem;
-   }
-   .responsive_initial_btns a {
-      text-decoration: none;
+   .initialApplicant_container1 > p {
       font-size: 2rem;
    }
-   .link_write {
-      padding: 0.8rem 4rem;
-      margin: 0;
-      margin-bottom: 1.5rem;
-   }
-
-   .status_container {
+   .initialApplicant_container2 {
       flex-direction: column;
+      justify-content: flex-start;
    }
-   .status_left_container, .status_right_container {
+   .introduce_container {
       width: 100%;
    }
-   .status_right_container {
-      margin-bottom: 4rem;
+   .introduce_content {
+      padding: 2rem 1rem;
+      height: 26rem;
    }
-   .club_container {
-      width: 25rem;
-      height: 20rem;
+   .content_top img {
+      width: 8rem;
    }
-   .club_name {
-      margin: 0;
+   .slogan {
+      font-size: 1.4rem;
    }
-   #statuscheck_form input {
-      width: 35rem;
-      height: 5.5rem;
-      font-size: 2rem;
-      margin-bottom: 1rem;
+   .piro {
+      font-size: 2.4rem;
    }
-   .status_container button {
-      margin: 0;
-      margin-top: 2rem;
-      margin-bottom: 6rem;
-   }
-   .club_description, .status_logo {
+   .content {
       display: none;
    }
-
-   .result_head img {
-      width: 6rem;
-      height: 6rem;
+   .link_write span {
+      font-size: 1.3rem;
    }
-   .result_head p {
-      font-size: 4.5rem;
+   .schedule_container {
+      width: 100%;
+      margin-top: 4rem;
    }
-   .result_comment, .resultno_comment {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-      margin-top: 5.5rem;
+   .schedule {
+      font-size: 2rem;
    }
-   .applyResult_container a {
-      font-size: 1.5rem;
-      margin-bottom: 6rem;
-   }
-   .applyResult_container a img {
-      width: 1.8rem;
-      height: 1.8rem;
-   }
-}
-
-@media (max-width: 580px) {
-   .main_comment {
-      text-align: center;
-      font-size: 4rem;
-      line-height: 5rem;
-   }
-   .main_logo {
-      font-size: 5rem;
-      line-height: 6rem;
+   #schedule_grid div {
+      font-size: 1.6rem;
    }
 }
