[fix] 지원 초기 페이지 지원 문구 변경

--- a/templates/for_applicant/initial.html
+++ b/templates/for_applicant/initial.html
@@ -26,7 +26,7 @@
                         <img src="{% static 'images/piro_logo.png' %}">
                         <p class="introduce slogan">프로그래밍의 첫 걸음,</p>
                         <p class="introduce piro">PIROGRAMMING</p>
-                        <p class="introduce content">열정 가득한 피로그래밍 22기 신입회원들을 기다리겠습니다!</p>
+                        <p class="introduce content">열정 가득한 피로그래밍 22기 신입회원들을 기다리고 있습니다!</p>
                     </div>
                     <a class="link_write" href="{% url 'applicants:apply' pk=template.pk %}">
                         <span>22기 서류 지원하러 가기</span>
@@ -46,7 +46,7 @@
                     <div class="grid_content">대면 면접 기간</div>
                     <div class="grid_content">12.14 ~ 12.15</div>
                     <div class="grid_content">최종 결과 공지</div>
-                    <div class="grid_content">12.08</div>
+                    <div class="grid_content">12.18</div>
                     <div class="grid_content">22기 워크샵</div>
                     <div class="grid_content">12.21</div>
                 </div>
