--- a/static/css/template/temp_detail.css
+++ b/static/css/template/temp_detail.css
@@ -80,7 +80,7 @@ body {
     margin-left: 5px;
     margin-bottom: 20px;
     padding-top: 5px;
-    
+    white-space: pre-wrap;
 }
 
 .section-title {
