--- a/templates/for_applicant/base.html
+++ b/templates/for_applicant/base.html
@@ -26,6 +26,15 @@
             font-family: 'Pretendard', sans-serif !important;
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EELM3TV9S"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-6EELM3TV9S');
+    </script>
     {% block head %} {% endblock %}
 </head>
 <body>
